p3/conf/argocd/argocd-server-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
spec:
  template:
    spec:
      containers:
      - name: argocd-server
        command: ["argocd-server"]
        args:
        - --insecure
        - --staticassets
        - /shared/app
